# fakes-n-contracts-example

./: .gitignore  devenv.nix  docker-compose.yml  pyproject.toml
db/migrations/: 20230929181528_create_user_table.sql
src/: fakes.py  main.py  models.py  services.py
tests/: contracts.py  test_crud_service_contract.py  test_main_app.py
